# Paligemma-tutorial

./: .gitignore  main.py  pyproject.toml  requirements.txt
templates/: index.html
